# sportsdata-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  CONTRIBUTING.md  LICENSE  P4_DESKTOP_PLAN.md  PLAN.md  POST_DEV.md  PRICING.md  README.md  RELEASE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml  pages.yml  release.yml  uptime.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_parent_run_id.py  0003_performance.py  0004_memory_unique_key.py  0005_odds_warehouse.py  0006_models_predictions.py  0007_snapshot_start_time.py  0008_alerts_subscriptions_leads.py  0009_timescale_hypertable.py  0010_conversation_archive_title.py  0011_run_transcripts.py  0012_event_end_time.py  0013_prices_unique_changepoint.py  0014_drop_dead_selections.py  0015_conversation_settings.py  0016_events_unique_mapping.py
docs/: AGENTS.md  ARCHITECTURE.md  COMMERCE_PLAN.md  DOMAIN-CUTOVER.md  ENGINES.md  LAUNCH.md  NEXT_STEPS.md  OPERATING.md  PRODUCT-OVERVIEW.md  PROVING.md  SECURITY.md  SGM_CAPTURE.md  STRIPE.md  STRUCTURE.md  UPDATING.md  hosted-mcp.md  models-and-limits.md
docs/history/: PLAN.md
documentation/: ROADMAP.md  SGM_CAPTURE.md
packaging/macos/: Info.plist.template  entitlements.plist  launcher.sh
scripts/: build-desktop.sh  deploy-site.sh  gen-catalogue.py  install-scheduler-cron.sh  license.py  make-macos-app.sh  publish-data-bundle.py  publish-r2.sh  record-demo.py  setup-stripe.py  sign-and-notarize.sh  support-lookup.sh
services/entitlement/: README.md  deploy.sh  gen-keypair.py  package-lock.json  package.json  schema.sql  wrangler.jsonc
services/entitlement/src/: catalogue.ts  config-gen.ts  download.ts  email.ts  index.ts  keys.ts  proxy.ts  sign.ts  stripe.ts
site/: README.md  catalogue.json  demo-fallback.json  feeds.html  index.html  privacy.html  refunds.html  terms.html
src/sportsdata_agents/: __init__.py  __main__.py  config.py  paths.py  secrets.py  workspace.py
src/sportsdata_agents/agents/: capability_labels.json  grounding.py  harness.py  loader.py  model_prefs.py  outputs.py  runtime.py  skills.py  spec.py
tests/: test_engines_seam.py  test_exotics.py  test_scoreboard_significance.py  test_sgm.py  test_sharp_line.py  test_watch_registry.py
tests/eval/: test_golden.py
tests/integration/: conftest.py  test_bsp_value_refire.py  test_conversations.py  test_costs.py  test_data.py  test_exchange_premium.py  test_export_training_data.py  test_ingestion_store.py  test_mcp_manager.py  test_model_value_watch.py  test_p1_agents.py  test_p2_exit_gate.py  test_persistence.py  test_prediction_bridge.py  test_quant_agents.py  test_race_form.py  test_racing_value.py  test_racingboard_engine_fair.py  test_ratings_slate.py  test_resolution.py  test_scoreboard.py  test_shadow_account.py  test_signal_bench.py  test_slate_recorder.py  test_sportsboard.py  test_stat_value_watch.py  test_team.py  test_trace_capture.py
tests/unit/: test_action_layer.py  test_agent_model_prefs.py  test_agent_specs.py  test_app_supervisor.py  test_arbitrage.py  test_billing.py  test_budget_guard.py  test_budget_watch.py  test_capability_coverage.py  test_catalogue_sync.py  test_chat_trace.py  test_cli_session.py  test_config.py  test_conv_settings.py  test_datafeed.py  test_demo_surface.py  test_desk_tools.py  test_desktop.py  test_desktop_schema_indexes.py  test_docs.py  test_ensure_schema.py  test_evals.py  test_fantasy_builder.py  test_gateway_app.py  test_grounding.py  test_harness.py  test_ingestion_normalizers.py  test_licensing.py  test_m010_tools_skills.py  test_marketplace.py  test_mcp_deny.py  test_mcp_prefs.py  test_mcp_version_handshake.py  test_model_gateway.py  test_monitors.py  test_notify.py  test_operator_console.py  test_ops_plane.py  test_orchestration.py  test_paths.py  (+18 more)
(+183 files in other folders)
