[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sportsdata-agents"
version = "0.77.16"
description = "Agentic platform over the sportsdata-mcp tool catalogue — a configurable team of LLM agents for sports research, odds intelligence, modelling, fantasy and tracking. Advisory only."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Daniel Tomaro" }]
keywords = ["mcp", "agents", "llm", "sports-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  # Safety net: PyPI rejects any upload carrying a "Private ::" classifier.
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Runtime deps. The data plane (`sportsdata-mcp`) is NOT listed here — it is run as a
# local stdio subprocess, resolved from PATH at runtime (or bundled into the desktop
# build), so it ships and versions independently of this package.
# Upper bounds cap the supply-chain blast radius of a breaking/compromised MAJOR for this
# private app (no lockfile yet). Each bound sits above the currently-resolved version.
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "httpx>=0.27,<1",
  "mcp>=1.2,<2",                  # MCP client SDK (talk to sportsdata-mcp)
  "litellm>=1.40,<2",            # unified model gateway (D3)
  "pyyaml>=6.0,<7",              # model policy + (later) agent specs
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "typer>=0.12,<1",
  "fastapi>=0.111,<1",          # gateway (M1.1)
  "uvicorn>=0.30,<1",
  "slack-bolt>=1.18,<2",         # Slack adapter (M1.2, D4)
  "aiohttp>=3.9,<4",             # slack-bolt socket mode
  "rich>=13.7,<15",
  "logfire>=0.30",               # tracing (D8) — left unbounded (0.x, fast-moving)
  "aiosqlite>=0.20,<1",         # the desktop default warehouse driver (P4)
  "keyring>=24.0,<26",          # OS keychain for the desktop app's secrets (P4)
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
# native desktop window (`agents desktop`): OS-native web view, no browser/Rust
desktop = ["pywebview>=5.0"]
# desktop packaging (P4): builds the downloadable app bundle (incl. the window dep)
build = ["pyinstaller>=6.0", "pywebview>=5.0"]
# sandbox analysis stack (data_analysis agent; local sandbox runs in this venv)
analysis = [
  "pandas>=2.0",
  "matplotlib>=3.8",
]
dev = [
  "pandas>=2.0",
  "matplotlib>=3.8",
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "aiosqlite>=0.20",          # in-memory SQLite for data tests (no live Postgres in CI)
  "pre-commit>=3.7",
]

[project.scripts]
agents = "sportsdata_agents.interfaces.cli.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sportsdata_agents"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]   # Typer/FastAPI use callables in argument defaults

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true     # heavy runtime deps not always installed in CI lint step
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast, isolated unit tests",
  "integration: cross-component tests (may need a local sportsdata-mcp / DB)",
  "live: hits real third-party endpoints (never in default CI)",
  "contract: agent registration / typed-output shape checks",
  "eval: quality/accuracy/calibration evals (scheduled, not default CI)",
]
